<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Cursos" android:background="@color/Azul">

    <TextView
            android:text="@string/Design"
            android:layout_width="67dp"
            android:layout_height="30dp"
            android:id="@+id/textView21" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintVertical_bias="0.427" android:textColor="@color/Amarelo"/>
    <TextView
            android:text="@string/Design"
            android:layout_width="146dp"
            android:layout_height="28dp"
            android:id="@+id/textView20" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintVertical_bias="0.599" android:textColor="@color/Amarelo"
            tools:text="@string/JogosDigitais"/>
    <TextView
            android:text="@string/Design"
            android:layout_width="191dp"
            android:layout_height="28dp"
            android:id="@+id/textView18" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintVertical_bias="0.668" android:textColor="@color/Amarelo"
            tools:text="@string/transacoesimob"/>
    <TextView
            android:text="@string/Design"
            android:layout_width="83dp"
            android:layout_height="29dp"
            android:id="@+id/textView17" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintVertical_bias="0.54" android:textColor="@color/Amarelo"
            tools:text="@string/Logistica"/>
    <TextView
            android:text="@string/tituloCT"
            android:layout_width="289dp"
            android:layout_height="74dp"
            android:id="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.066" app:layout_constraintHorizontal_bias="0.207"
            android:textColor="@color/Branco"/>
    <TextView
            android:text="@string/cursosCT"
            android:layout_width="166dp"
            android:layout_height="30dp"
            android:id="@+id/txtInscricao" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintVertical_bias="0.233" android:textColor="@color/Amarelo" android:textSize="15sp"/>
    <TextView
            android:text="@string/administracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintVertical_bias="0.333" android:textColor="@color/Amarelo"/>
    <TextView
            android:text="@string/RH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.086" app:layout_constraintVertical_bias="0.381"
            android:textSize="15sp" android:textColor="@color/Amarelo"/>
    <TextView
            android:text="@string/Design"
            android:layout_width="171dp"
            android:layout_height="26dp"
            android:id="@+id/textView12" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintVertical_bias="0.486" android:textColor="@color/Amarelo"
            tools:text="@string/Mambiente"/>
</android.support.constraint.ConstraintLayout>