<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/Azul" android:textAlignment="textEnd">
    <TextView
            android:text="@string/tituloMA"
            android:layout_width="343dp"
            android:layout_height="35dp"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.06"
            android:textSize="16sp" android:textColor="@color/Branco" app:layout_constraintHorizontal_bias="1.0"
            android:textAlignment="textEnd"/>
    <TextView
            android:text="@string/SubtituloMA"
            android:layout_width="384dp"
            android:layout_height="36dp"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.147"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/Amarelo"
            android:textAlignment="textEnd" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/acessMA"
            android:layout_width="79dp"
            android:layout_height="31dp"
            android:id="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/Branco"
            app:layout_constraintHorizontal_bias="0.908" app:layout_constraintVertical_bias="0.21"/>
    <TextView
            android:text="@string/linkMA"
            android:layout_width="278dp"
            android:layout_height="26dp"
            android:id="@+id/txtLink" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintVertical_bias="0.271" android:textColor="@color/Branco"
            android:background="@color/Laranja" android:paddingLeft="5dp" android:paddingRight="5dp"/>
    <TextView
            android:text="@string/parasaberMA"
            android:layout_width="256dp"
            android:layout_height="36dp"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/Branco"
            app:layout_constraintHorizontal_bias="0.798" app:layout_constraintVertical_bias="0.328"/>
</android.support.constraint.ConstraintLayout>