<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Inscricao">

    <EditText
            android:layout_width="380dp"
            android:layout_height="56dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.452" android:hint="@string/nome"
            app:layout_constraintHorizontal_bias="0.519"/>
    <EditText
            android:layout_width="380dp"
            android:layout_height="65dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.57"
            android:hint="@string/email" app:layout_constraintHorizontal_bias="0.562"/>
    <EditText
            android:layout_width="380dp"
            android:layout_height="59dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.658"
            app:layout_constraintVertical_bias="0.681" android:hint="@string/telefone"/>
    <ImageView
            android:layout_width="141dp"
            android:layout_height="144dp" app:srcCompat="@drawable/anonim"
            android:id="@+id/imageView8" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.968"
            app:layout_constraintVertical_bias="0.203" android:contentDescription="@string/Avatar"/>
    <ImageView
            android:layout_width="304dp"
            android:layout_height="182dp" app:srcCompat="@drawable/senac"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.949"/>
</android.support.constraint.ConstraintLayout>